@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class HRM {
    name
    vatNumber
    phoneNumber
    email
}

class Team {
    collaborators
    skill list
}

class TeamRepository {
    teams
}

class Collaborator {
    name
    birthdate
    admission date
    address
    contact info (mobile and email)
    Taxpayer number
    ID doc type and number
}

'class User {
'    name
'    email
'    password
'}


HRM "1" - "1" Team: provides team size and skills to the system, which then creates >
Team "1" -- "*" Collaborator: is made of >
Team "1" -- "1" TeamRepository: stored in >
Team "1" - "1" HRM : is accepted or refused by >
Collaborator "1" - "1" HRM : is registered by >
@enduml